# om

./: CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  binary_details.json  install.sh  logo.txt  om  om.1
.github/workflows/: release.yml
completions/: om.bash  om.fish  om.zsh
src/: om  om.cpp
